Adding minimum limit to password

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             type="password"
             id="password"
             placeholder="Password"
+            minlength="6"
             style="height: 30px; width: 210px"
             required
           />
