fix: fixing css file

--- a/index.html
+++ b/index.html
@@ -13,45 +13,29 @@
   </head>
   <body>
     <div class="bg-img">
-      <h1
-        class="heading"
-        style="
-          font-size: 400%;
-          color: rgb(70, 64, 64);
-          font-family: 'Times New Roman', Times, serif;
-        "
-      >
-        Air Ticket Online
-      </h1>
-      <main class="main-content">
-        <form class="login">
+      <h1 class="heading">Air Ticket Online</h1>
+      <form>
+        <main class="main">
           <h1 class="tittle">Login Here</h1>
-          <img src="login.jpeg" alt="" />
           <br />
-          <img src="" alt="" />
           <i class="fa fa-envelope icon"></i>
           <input
             type="email"
             id="email"
             placeholder="Email"
-            style="height: 30px; width: 210px"
-            required
-          />
-          <br /><br />
+            class="email"
+          /><br /><br />
           <i class="fa fa-key icon"></i>
           <input
             type="password"
             id="password"
             placeholder="Password"
-            minlength="6"
-            style="height: 30px; width: 210px"
-            required
-          />
-          <br /><br /><br />
-          <button style="border-radius: 13%">Submit</button>
-        </form>
-      </main>
-      <footer style="font-size: larger">@ Copyrights reserved</footer>
+            class="password"
+          /><br /><br /><br />
+          <button>Submit</button><br /><br /><br />
+        </main>
+        <footer>@ Copyrights reserved</footer>
+      </form>
     </div>
   </body>
 </html>
