fix: Minimum limit to password added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             id="password"
             placeholder="Password"
             class="password"
+            minlength="6"
           /><br /><br /><br />
           <button>Submit</button><br /><br /><br />
         </main>
