--- a/index.html
+++ b/index.html
@@ -2,41 +2,68 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="app.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hands on practice</title>
+    <title>Bootstrap Practice</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div class="bg-img">
-      <h1 class="heading">Air Ticket Online</h1>
-      <form>
-        <main class="main">
-          <h1 class="tittle">Login Here</h1>
-          <br />
-          <i class="fa fa-envelope icon"></i>
-          <input
-            type="email"
-            id="email"
-            placeholder="Email"
-            class="email"
-          /><br /><br />
-          <i class="fa fa-key icon"></i>
-          <input
-            type="password"
-            id="password"
-            placeholder="Password"
-            class="password"
-            minlength="6"
-          /><br /><br /><br />
-          <button>Submit</button><br /><br /><br />
-        </main>
-        <footer>@ Copyrights reserved</footer>
-      </form>
+    <div class="b">
+      <div class="row">
+        <div class="col bg-white text-primary">
+          <h2 class="ms-5 pt-2">General Information</h2>
+          <br /><br />
+          <div class="ms-4">
+            <input
+              class="col-xxl-11 ms-4"
+              type="text"
+              placeholder="Title"
+            /><br /><br />
+            <div class="row justify-content-md-around">
+              <input class="col-lg-5" type="text " placeholder="First Name" />
+              <input class="col-lg-5" type="text " placeholder="Last Name" />
+            </div>
+            <br />
+            <input
+              class="col-xxl-11 ms-4"
+              type=" text"
+              placeholder="Position"
+            />
+            <br /><br />
+            <input
+              class="col-xxl-11 ms-4"
+              type=" text"
+              placeholder="Position"
+            />
+            <br /><br />
+            <div class="row justify-content-md-around">
+              <input
+                class="col-lg-5"
+                type="text "
+                placeholder="Business Arena"
+              />
+              <input class="col-lg-5" type="text " placeholder="Employees" />
+            </div>
+          </div>
+        </div>
+
+        <!-- contact details -->
+        <div class="col bg-primary text-light">
+          <h2 class="ms-5 pt-2">Contact Details</h2>
+        </div>
+      </div>
     </div>
   </body>
 </html>
