fix: made responsive using media queries

--- a/index.html
+++ b/index.html
@@ -18,22 +18,25 @@
         <main class="main">
           <h1 class="tittle">Login Here</h1>
           <br />
-          <i class="fa fa-envelope icon"></i>
-          <input
-            type="email"
-            id="email"
-            placeholder="Email"
-            class="email"
-          /><br /><br />
-          <i class="fa fa-key icon"></i>
-          <input
-            type="password"
-            id="password"
-            placeholder="Password"
-            class="password"
-            minlength="6"
-          /><br /><br /><br />
-          <button>Submit</button><br /><br /><br />
+          <div class="inputs">
+            <i class="fa fa-envelope icon"></i>
+            <input
+              type="email"
+              id="email"
+              placeholder="Email"
+              class="email"
+            /><br /><br />
+            <i class="fa fa-key icon"></i>
+            <input
+              type="password"
+              id="password"
+              placeholder="Password"
+              class="password"
+              minlength="6"
+            />
+          </div>
+          <br /><br /><br />
+          <button class="button">Submit</button><br /><br /><br />
         </main>
         <footer>@ Copyrights reserved</footer>
       </form>
