--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <form class="">
       <div class="row form-wrapper">
         <!-- General Information -->
-        <div class="col-md-6 bg-white text-primary ">
+        <div class="col-md-6 bg-white text-primary generalinfo">
           <h2 class="ms-5 pt-5">General Information</h2>
           <br /><br />
           <div class="ms-sm-5 me-5">
@@ -168,7 +168,7 @@
             </div>
             <br /><br /><br>
          <!-- button -->
-         <button class="btn btn-light btn-lg ms-5  ">Register</button>
+         <button class="btn btn-light btn-lg ms-5 button   ">Register</button>
         </div>
       
     </form>
