--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
+    <title>Recipe Management</title>
     <link rel="stylesheet" href="app.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -8,88 +9,80 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript</title>
   </head>
   <body>
-    <h1>Recipe Management</h1>
-
-    <div class="container">
-      <table>
-        <tr>
-          <td>
-            <!-- html form -->
-            <form
-              onsubmit="event.preventDefault(); onFormSubmit();"
-              autocomplete="off"
-            >
-              <div>
-                <label>Recipe ID</label>
-                <input
-                  type="number"
-                  id="id"
-                  placeholder="Enter Recipe ID"
-                  required
-                />
-              </div>
-              <br />
-              <div>
-                <label>Recipe Name</label>
-                <input
-                  type="text"
-                  id="name"
-                  placeholder="Enter Recipe Name"
-                  required
-                />
-              </div>
-              <br />
-              <div>
-                <label>Recipe Type</label>
-                <input
-                  type="text"
-                  id="type"
-                  placeholder="Enter Recipe Type"
-                  required
-                />
-              </div>
-              <br />
-              <div>
-                <label>Recipe Description</label>
-                <input
-                  type="text"
-                  id="description"
-                  placeholder="Enter Description of Recipe "
-                  required
-                />
-              </div>
-              <br /><br />
-              <div class="form-acion-button btn btn-lg" id="submit">
-                <input type="submit" value="Add" />
-              </div>
-            </form>
-          </td>
-        </tr>
-      </table>
-      <td>
-        <br /><br /><br />
-        <!-- list -->
-        <table class="list" id="recipeList">
-          <thead>
-            <tr class="heading">
-              <th>ID</th>
-              <th>Name</th>
-              <th>Type</th>
-              <th>Description</th>
-              <th>Action</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </td>
+    <nav class="navbar navbar-light">
+      <h2 class="heading">Recipe Management</h2>
+    </nav>
+    <br /><br />
+    <div class="formBox">
+      <form autocomplete="off" onsubmit="onFormSubmit()">
+        <div>
+          <label for="name">Name</label>
+          <input
+            class="form-control"
+            type="text"
+            name="name"
+            id="name"
+            placeholder="Enter Recipe Name"
+            required
+          />
+        </div>
+        <br />
+        <div>
+          <label for="type">Type</label>
+          <input
+            class="form-control"
+            type="text"
+            name="type"
+            id="type"
+            placeholder="Enter Recipe Type"
+            required
+          />
+        </div>
+        <br />
+        <div>
+          <label for="description">Description</label>
+          <input
+            class="form-control"
+            type="text"
+            name="description"
+            id="description"
+            placeholder="Enter Recipe Description"
+            required
+          />
+        </div>
+        <br />
+        <div>
+          <input class="btn btn-success" type="submit" value="Add" />
+          <input class="btn btn-warning" type="reset" value="Reset" />
+        </div>
+      </form>
     </div>
 
+    <div class="listBox">
+      <table class="list" id="storeList">
+        <thead>
+          <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Type</th>
+            <th>Description</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+    <br />
+    <br />
+    <br />
+
     <script src="app.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
